Bug 106838 - options for variant Icon set in Conditional formatting disappeared
Summary: options for variant Icon set in Conditional formatting disappeared
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.3.1.2 release
Hardware: All All
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.4.0 target:5.3.4
Keywords: bibisected, bisected, regression
: 108603 (view as bug list)
Depends on:
Blocks: Conditional-Formatting
  Show dependency treegraph
 
Reported: 2017-03-28 19:50 UTC by Roman Kuznetsov
Modified: 2017-07-17 09:21 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshots with and without option for Icon set (67.19 KB, image/png)
2017-03-28 19:51 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2017-03-28 19:50:53 UTC
Description:
options for variant Icon set in Conditional formatting disappeared in


Steps to Reproduce:
1. Open LO Calc 5.3.1.2
2. Select menu item Format-Conditional formatting-Icon set
3. Look on empty screen without options =(

Actual Results:  
impossible use Icon set in Conditional formatting because they can not be set up

Expected Results:
Icon set can set up


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:53.0) Gecko/20100101 Firefox/53.0
Comment 1 Roman Kuznetsov 2017-03-28 19:51:49 UTC
Created attachment 132237 [details]
screenshots with and without option for Icon set
Comment 2 Roman Kuznetsov 2017-03-28 19:54:18 UTC
in LO 5.2.5.2 these option there are
Comment 3 Zineta 2017-03-29 08:07:58 UTC
Tried:
Version: 5.3.1.0.0+
Build ID: cba6653d460cc3800d1bd84ca9d39279b928e473
CPU Threads: 2; OS Version: Windows 6.1; UI Render: default; Layout Engine: new; 
TinderBox: Win-x86@62-merge-TDF, Branch:libreoffice-5-3, Time: 2017-01-26_08:58:36
Locale: bs-BA (bs_BA); Calc: group

Version: 5.4.0.0.alpha0+
Build ID: c2850bab4f7e5700151a18d806268f2b86a25d56
CPU Threads: 2; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-01-24_03:10:33
Locale: bs-BA (bs_BA); Calc: group

OS: Win7

can not be set up
Comment 4 raal 2017-03-29 20:37:00 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks
 f3a97a3b69cb71ad8d233d4aa681d706540ab53f is the first bad commit
commit f3a97a3b69cb71ad8d233d4aa681d706540ab53f
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Oct 25 16:03:39 2016 +0200

    source 7549878fd63bb2792432865958874c644a948d45

author	Caolán McNamara <caolanm@redhat.com>	2016-10-24 14:44:56 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2016-10-25 10:41:23 (GMT)
commit 7549878fd63bb2792432865958874c644a948d45 (patch)
tree d0251ec815b7df4cba33f9c176a24c52488ef9fa
parent b45fe99f16762c5d79ce67f6a04ee58fc7c14456 (diff)
convert conditional format src fragment to .ui and layout
this is a difficult widget
Comment 5 Commit Notification 2017-03-30 09:19:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1c2dd8dc14effe739bd826cf4fe77145d5b751bc

Resolves: tdf#106838 icon set not visible in conditional formatting

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2017-03-30 09:22:04 UTC
backport for 5-3 in gerrit
Comment 7 Zineta 2017-04-03 08:56:36 UTC
Confirmed:

Version: 5.4.0.0.alpha0+ (x64)
Build ID: 74917d23782413aa0f129bcf9e6bf5a1c496d23b
CPU threads: 2; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2017-04-02_23:58:52
Locale: bs-BA (bs_BA); Calc: group
Comment 8 Commit Notification 2017-04-20 04:17:58 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4e40cf62a142813a2ffa0a64148c84c1b4e60be9&h=libreoffice-5-3

Resolves: tdf#106838 icon set not visible in conditional formatting

It will be available in 5.3.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Katarina Behrens (Inactive) 2017-06-24 16:49:51 UTC
*** Bug 108603 has been marked as a duplicate of this bug. ***