Resolves: tdf#106838 icon set not visible in conditional formatting

Change-Id: Ibafaa487d39a69bc7c5c150361368614c0d9e004